<?xml version="1.0" encoding="utf-8"?>
    <resources>
        <string name="app_name">My Case</string>
        <string name="user_select">User Select</string>
        <string name="court">Court</string>
        <string name="lawyer">Lawyer</string>
    <string name="sending">sending</string>
    <string name="show_more">show_more</string>
    <string name="request_no_123456">request no 123456</string>
    <string name="paid_requests">paid requests</string>
    <string name="payments">payments</string>
    <string name="pay_request">pay_request</string>
    <string name="enter_request_number">enter_request_number</string>
    <string name="_123456">123456</string>
    <string name="the_amount_of_the_fee">the_amount_of_the_fee</string>
    <string name="egyptian_pound">egyptian_pound</string>
    <string name="_300">300</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="select_payment_method">select_payment_method</string>
    <string name="bank_card">bank_card</string>
    <string name="money_wallet">money_wallet</string>
    <string name="add_bank_card">add_bank_card</string>
    <string name="enter_name">enter_name</string>
    <string name="enter_number">enter_number</string>
    <string name="enter_month">enter_month</string>
    <string name="enter_year">enter_year</string>
    <string name="enter_cvv_num">enter_cvv_num</string>
    <string name="confirm">confirm</string>
    <string name="enter_otp_number">enter_otp_number</string>
    <string name="_0">0</string>
    <string name="enter">enter</string>
    <string name="add_number">add_number</string>
    <string name="phone_number">phone_number</string>
    <string name="the_request_has_been_successfully_paid">the_request_has_been_successfully_paid</string>
    <string name="please_keep_a_copy_of_the_receipt">please_keep_a_copy_of_the_receipt</string>
    <string name="receipt_of_payment">receipt_of_payment</string>
    <string name="request_number">request_number</string>
    <string name="date">date</string>
    <string name="send">send</string>
    <string name="payment_completed_successfully">payment_completed_successfully</string>
        <string name="sign_in">SignIn</string>
        <string name="btn_sign">BtnSign</string>
        <string name="email">Email</string>
        <string name="user_pass">User Password</string>
        <string name="court_type">Court Type</string>
        <string name="forget_pass">Forget Pass</string>
        <string name="con_sign">Continue Sign</string>
        <string name="not_a_member">Not A Member</string>
        <string name="register_now">Register Now</string>
        <string name="national_num">National Number</string>
        <string name="create_acc">create account</string>
        <string name="card_num">Card Number</string>
        <string name="btn_verify">Btn verify</string>
        <string name="have_acc">Have account</string>
        <string name="receive_mail">receive mail</string>
        <string name="cont_sign">continue sign</string>
        <string name="name">name</string>
        <string name="phone_num">phone_num</string>
        <string name="pass_regi">pass_regi</string>
        <string name="confirm_pass">confirm_pass</string>
        <string name="btn_regi">btn_regi</string>
        <string name="success_signin">success_sign in</string>
        <string name="go_to_home_page">go_to_home_page</string>
        <string name="reset_pass">reset_pass</string>
        <string name="instruct">instruct</string>
        <string name="btn_reset">btn_reset</string>
        <string name="back_to_sign_in">back_to_sign_in</string>
        <string name="txt_reset">txt_reset</string>
        <string name="btn_set">btn_set</string>
        <string name="dont_receive_mail">dont_receive_mail</string>
        <string name="resend">resend</string>
        <string name="pass_reset">pass_reset</string>
        <string name="pass_reset_conf">pass_reset_conf</string>
        <string name="txt_insert_pass">txt_insert_pass</string>
        <string name="btn_save">btn_save</string>
        <string name="change_pass_successfully">change_pass_successfully</string>
        <string name="txt_confirm_pass">txt_confirm_pass</string>
        <string name="btn_continue">btn_continue</string>
        <string name="title_activity_home">HomeActivity</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>
        =======
        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
        <string name="case_x" translatable="false">قضية س</string>
        <string name="no_updates" translatable="false">لا يوجد تحديث</string>
        <string name="clients" translatable="false">الموكلون</string>
        <string name="add_new_client" translatable="false">add new client</string>
        <string name="details" translatable="false">التفاصيل</string>
        <string name="requests" translatable="false">الطلبات</string>
        >>>>>>> origin/master

        <string name="menu_home">Home</string>
        <string name="menu_gallery">Gallery</string>
        <string name="menu_pass">menu_pass</string>
        <string name="menu_about_app">about_app</string>
        <string name="menu_share_app">share_app</string>
        <string name="menu_rate_app">rate_app</string>
        <string name="menu_help">help</string>
        <string name="menu_logout">logout</string>
        <string name="menu">menu</string>
        <string name="menu_slideshow">Slideshow</string>
        <string name="notification">notification</string>
        <string name="settings">settings</string>
        <string name="password">password</string>
        <string name="brief_about_app">brief about app</string>
        <string name="share_app">share app</string>
        <string name="help_need">need help</string>
        <string name="btn_logout">log out</string>
        <string name="rate_app">rate app</string>
        <string name="cases">cases</string>
        <string name="profile">profile</string>
        <!-- TODO: Remove or change this placeholder text -->

        <string name="profile_pic">profile pic</string>
        <string name="edit_name">edit name</string>
        <string name="edt_txt_name">edt txt name</string>
        <string name="save_changes">save changes</string>
        <string name="pic_edt">pic edit</string>

        <string name="mail">mail</string>
        <string name="edt_mail">edt mail</string>
        <string name="phone">phone</string>
        <string name="delete_acc">delete account</string>
        <string name="delete_hint">delete hint</string>
        <string name="btn_delete">btn delete</string>
        <string name="help">help</string>
        <string name="help_txt">help text</string>
        <string name="email_address">email address</string>
        <string name="brief">brief</string>
        <string name="brief_txt">brief txt</string>
        <string name="lawyer_name">lawyer name</string>
        <string name="specialization">specialization</string>
        <string name="general_info">general info</string>
        <string name="contact_me">contact_me</string>
        <string name="location">location</string>
        <string name="street_name">street name</string>
        <string name="build_num">build number</string>
        <string name="city">city</string>
        <string name="lawsuits">law suits</string>
        <string name="num_of_clients">num of clients</string>
        <string name="experience">experience</string>
        <string name="years_of_experience">years of experience</string>
        <string name="telephone_num">telephone_num</string>
        <string name="his_phone">his phone</string>
        <string name="his_mail">his mail</string>
        <string name="txt_mail">txt mail</string>
        <string name="txt_cases">txt cases</string>
        <string name="current_cases">current cases</string>
        <string name="closed_cases">closed_cases</string>
        <string name="add_case">add cases</string>
        <string name="txt_current">txt current</string>
        <string name="txt_closed">txt closed</string>
        <string name="txt_add_case">txt add case</string>
        <string name="case_num">case number</string>
        <string name="case_subject">case subject</string>
        <string name="name_of_client">name of client</string>
        <string name="address_of_client">address of client</string>
        <string name="extra_info">extra info</string>
        <string name="opponent_name">opponent name</string>
        <string name="opponent_address">opponent address</string>
        <string name="opponent_info">opponent info</string>
        <string name="select_files">select files</string>
        <string name="case_details">case details</string>
    <string name="payer_name">payer name</string>
    />
</resources>