<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyCase.AppBarOverlay"
        android:background="@drawable/app_bar_background"
        app:layout_constraintTop_toTopOf="parent"
        >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/Theme.MyCase.PopupOverlay" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/cont_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.308" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_pic"
                android:padding="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/navy_blue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pic_edt"
                android:padding="12dp"
                android:textSize="18sp"
                android:textColor="@color/navy_blue"
                />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:src="@drawable/user"
                android:padding="6dp"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="10sp"
                android:background="@drawable/edt_background"
                android:hint="@string/edt_txt_name"
                android:paddingStart="20sp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/dark_grey"
                />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textColor="@color/navy_blue"
    android:text="@string/delete_acc"
    android:padding="12dp"
    android:textSize="18sp"
    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_hint"
                android:padding="12dp"
                android:textSize="15sp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete"/>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>