<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <TextView
        android:id="@+id/reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#3297EE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
    <TextView
        android:id="@+id/instruct"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/instruct"
        app:layout_constraintTop_toBottomOf="@+id/reset_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintVertical_bias="0.3" />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:background="@drawable/edt_background"
        android:hint="@string/email"
        android:paddingStart="20sp"
        app:layout_constraintTop_toBottomOf="@+id/instruct"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/basic_button"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/btn_reset"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/back_to_sign_in"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="30dp"
    android:textColor="#3297EE"
    android:textSize="15sp"
    android:textStyle="bold"
    />
</androidx.constraintlayout.widget.ConstraintLayout>